--- a/resume.html
+++ b/resume.html
@@ -182,7 +182,7 @@
             <div class="resume-item">
               <h4>3D Artist (Resource Person – Project Basis)</h4>
               <h5>Company: HCL Technology</h5>
-              <h5>2017 - 2018</h5>
+              <h5>july 2024-December 2024</h5>
               <p><em>Thiruporur, Chennai</em></p>
               <ul>
                 <li>Worked as a 3D Artist for a specialized project under HCL as a resource person.</li>
