--- a/portfolio.html
+++ b/portfolio.html
@@ -126,7 +126,7 @@
                   <h4>App </h4>
                   <h4>Unity </h4>
                   <p>Eye Training Simulation in VR</p>
-                  <a href="https://mega.nz/file/MiNVjAQS#l5XB0AFBW_yLmzI-571DOu4EQvcfKfBKnoH8_obvbt8" title="App Demo" class="glightbox preview-link" data-type="video">
+                  <a href="https://mega.nz/file/MiNVjAQS#l5XB0AFBW_yLmzI-571DOu4EQvcfKfBKnoH8_obvbt8" title="App Demo" class=" preview-link" data-type="video">
                     <i class="bi bi-play-circle"></i>
                   </a>
                  
@@ -141,7 +141,7 @@
                   <h4>App </h4>
                   <h4>Unity </h4>
                   <p>VR Medical Simulation Pfizer</p>
-                  <a href="https://mega.nz/file/9vE1kLyA#9hMKnTTb9bIJOQCrRTZorINQWO8A83ksPblh69GeDoM" title="App Demo" class="glightbox preview-link" data-type="video">
+                  <a href="https://mega.nz/file/9vE1kLyA#9hMKnTTb9bIJOQCrRTZorINQWO8A83ksPblh69GeDoM" title="App Demo" class=" preview-link" data-type="video">
                     <i class="bi bi-play-circle"></i>
                   </a>
                  
@@ -155,7 +155,7 @@
                 <div class="portfolio-info">
                   <h4>App </h4>
                   <h4>Unity </h4>
-                  <p>VR Medical Simulation Pfizer</p>
+                  <p>VR Medical Simulation injection</p>
                   <a href="https://mega.nz/file/ZqcSCKBT#ADSBC6gQmsiDav98KaYeFMNTCHrCDi9fjlXTVq_cDOU" title="App Demo" class=" preview-link" data-type="video">
                     <i class="bi bi-play-circle"></i>
                   </a>
