--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>28 September 2002</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.karthicks.in</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><www class="karthicks in"></www></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 8220774610</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Coimbatore, Tamil Nadu</span></li>
                 </ul>
