--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
         <h2>KARTHICK S</h2>
         <p>I'm <span class="typed" data-typed-items="Game Developer,3D Artist"></span><span class="typed-cursor typed-cursor--blink"></span></p>
         <div class="social-links">
-          <a href="#"><i class="bi bi-twitter-x"></i></a>
+          <a href="https://github.com/Karthick2830"><i class="bi bi-github"></i></a>
           <a href="#"><i class="bi bi-facebook"></i></a>
           <a href="#"><i class="bi bi-instagram"></i></a>
-          <a href="#"><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/skarthick--s/"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
 
