--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
       <h3 class="sitename">Personal</h3>
       <p>Passionate game developer and 3D artist crafting immersive experiences. Connect with me on social platforms below.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
+        <a href="https://github.com/Karthick2830"><i class="bi bi-github"></i></a>">
         <a href=""><i class="bi bi-facebook"></i></a>
         <a href=""><i class="bi bi-instagram"></i></a>
         <a href=""><i class="bi bi-skype"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/skarthick--s/"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
