--- a/contact.html
+++ b/contact.html
@@ -146,11 +146,11 @@
               <div>
                 <h3>Social Profiles</h3>
                 <div class="social-links">
-                  <a href="https://github.com/Karthick2830"><i class="bi bi-github"></i></a>
-                  <a href="#"><i class="bi bi-facebook"></i></a>
+                  <a href="https://github.com/Karthick2830" target="_blank"><i class="bi bi-github"></i></a>
+                  <!-- <a href="#"><i class="bi bi-facebook"></i></a>
                   <a href="#"><i class="bi bi-instagram"></i></a>
-                  <a href="#"><i class="bi bi-skype"></i></a>
-                  <a href="https://www.linkedin.com/in/skarthick--s/"><i class="bi bi-linkedin"></i></a>
+                  <a href="#"><i class="bi bi-skype"></i></a> -->
+                  <a href="https://www.linkedin.com/in/skarthick--s/" target="_blank"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
