--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
         <h2>KARTHICK S</h2>
         <p>I'm <span class="typed" data-typed-items="Game Developer,3D Artist"></span><span class="typed-cursor typed-cursor--blink"></span></p>
         <div class="social-links">
-          <a href="https://github.com/Karthick2830"><i class="bi bi-github"></i></a>
-          <a href="#"><i class="bi bi-facebook"></i></a>
-          <a href="#"><i class="bi bi-instagram"></i></a>
-          <a href="https://www.linkedin.com/in/skarthick--s/"><i class="bi bi-linkedin"></i></a>
+          <a href="https://github.com/Karthick2830" target="_blank"><i class="bi bi-github"></i></a>
+          <!-- <a href="#"><i class="bi bi-facebook"></i></a>
+          <a href="#"><i class="bi bi-instagram"></i></a> -->
+          <a href="https://www.linkedin.com/in/skarthick--s/" target="_blank"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
 
@@ -106,11 +106,11 @@
       <h3 class="sitename">Personal</h3>
       <p>Passionate game developer and 3D artist crafting immersive experiences. Connect with me on social platforms below.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://github.com/Karthick2830"><i class="bi bi-github"></i></a>">
-        <a href=""><i class="bi bi-facebook"></i></a>
+        <a href="https://github.com/Karthick2830" target="_blank"><i class="bi bi-github"></i></a>">
+        <!-- <a href=""><i class="bi bi-facebook"></i></a>
         <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-skype"></i></a>
-        <a href="https://www.linkedin.com/in/skarthick--s/"><i class="bi bi-linkedin"></i></a>
+        <a href=""><i class="bi bi-skype"></i></a> -->
+        <a href="https://www.linkedin.com/in/skarthick--s/" target="_blank"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
